<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/result"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:background="@drawable/rounded_top"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_image">

            <TextView
                android:id="@+id/confidence_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:textAlignment="center"
                android:textColor="@color/primary_400"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/result_image"
                tools:text="50.9%" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/confidence_text" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:maxLines="8"
                android:textAlignment="center"
                tools:text="@tools:sample/lorem/random" />

            <Button
                android:id="@+id/find_hospital_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_hospital"
                app:layout_constraintTop_toBottomOf="@id/description_text" />


        </LinearLayout>

        <TextView
            android:id="@+id/related_news_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/related_news"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_container" />


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:indeterminate="true"
            android:visibility="visible"
            app:indicatorColor="@color/primary_400"
            app:layout_constraintEnd_toEndOf="@id/related_news_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/related_news_text"
            app:layout_constraintTop_toBottomOf="@id/related_news_text"
            app:trackColor="@color/primary_10" />

        <TextView
            android:id="@+id/no_news_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/no_news"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/related_news_text" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintTop_toBottomOf="@+id/related_news_text"
            app:layout_constraintVertical_chainStyle="packed"
            tools:listitem="@layout/item_news" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
